--- a/package.json
+++ b/package.json
@@ -24,15 +24,19 @@
     "@aws-sdk/s3-request-presigner": "^3.623.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.1",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "^5.19.1",
     "@slack/bolt": "^3.19.0",
     "@slack/web-api": "^7.3.2",
     "@types/multer": "^1.4.11",
+    "@types/passport-facebook": "^3.0.3",
+    "@types/passport-google-oauth20": "^2.0.16",
     "aws-sdk": "^2.1667.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
@@ -46,6 +50,9 @@
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.4.5",
+    "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "touch-cli": "^0.0.1",
