--- a/package.json
+++ b/package.json
@@ -47,9 +47,11 @@
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.4.5",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
