--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image to ghcr.io
 on:
   push:
     branches:
-      - develop # Trigger on push to develop branch
+      - dev # Trigger on push to dev branch
   workflow_dispatch: # Allow manual triggering of the workflow
 
 jobs:
@@ -26,16 +26,16 @@ jobs:
       # Step 3: Build the Docker image
       - name: Build Docker image
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/carket-develop:${{ github.sha }} .
+          docker build -t ghcr.io/${{ github.repository }}/carket-dev:${{ github.sha }} .
 
       # Step 4: Push the Docker image to GitHub Container Registry
       - name: Push Docker image to ghcr.io
         run: |
-          docker push ghcr.io/${{ github.repository }}/carket-develop:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository }}/carket-dev:${{ github.sha }}
 
       # Optional: Add an additional step to tag the latest version
       - name: Tag Docker image as latest
-        if: github.ref == 'refs/heads/develop' # Only tag as latest if on main branch
+        if: github.ref == 'refs/heads/dev' # Only tag as latest if on main branch
         run: |
-          docker tag ghcr.io/${{ github.repository }}/carket-develop:${{ github.sha }} ghcr.io/${{ github.repository }}/carket-develop:latest
-          docker push ghcr.io/${{ github.repository }}/carket-develop:latest
+          docker tag ghcr.io/${{ github.repository }}/carket-dev:${{ github.sha }} ghcr.io/${{ github.repository }}/carket-dev:latest
+          docker push ghcr.io/${{ github.repository }}/carket-dev:latest
