--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -39,3 +39,18 @@ jobs:
         run: |
           docker tag ghcr.io/${{ github.repository }}/carket-dev:${{ github.sha }} ghcr.io/${{ github.repository }}/carket-dev:latest
           docker push ghcr.io/${{ github.repository }}/carket-dev:latest
+
+        name: Update Docker container on VM
+        run: |
+          echo "$SSH_PRIVATE_KEY" > ssh_key.pem
+          chmod 600 ssh_key.pem
+          ssh -i ssh_key.pem -o StrictHostKeyChecking=no $VM_USERNAME@$VM_IP << 'EOF'
+          docker pull ghcr.io/merquery-development/carket-backend/carket-dev:latest
+          docker stop carket-dev || true
+          docker rm carket-dev || true
+          docker run -d --env-file ~/carket/.env --name carket-dev -p 3000:3000 ghcr.io/merquery-development/carket-backend/carket-dev:latest
+          EOF
+        env:
+          VM_USERNAME: ${{ secrets.VM_USERNAME }}
+          VM_IP: ${{ secrets.VM_IP }}
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
