--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "egtx-erp-be",
+  "name": "carket",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,63 +20,49 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.623.0",
-    "@aws-sdk/s3-request-presigner": "^3.623.0",
-    "@nestjs/cache-manager": "^2.2.2",
+    "@aws-sdk/client-s3": "^3.685.0",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/microservices": "^10.4.1",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.4.0",
-    "@slack/bolt": "^3.19.0",
-    "@slack/web-api": "^7.3.2",
-    "@types/multer": "^1.4.11",
-    "@types/passport-facebook": "^3.0.3",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "aws-sdk": "^2.1667.0",
+    "@nestjs/platform-express": "^10.4.6",
+    "@nestjs/swagger": "^8.0.1",
+    "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.7.6",
-    "cache-manager-redis-yet": "^5.1.4",
+    "cache-manager": "5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "dotenv": "^16.4.5",
-    "express-basic-auth": "^1.2.1",
-    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "multer": "^1.4.5-lts.1",
-    "nestjs-i18n": "^10.4.5",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "prisma": "^5.21.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "touch-cli": "^0.0.1",
-    "uuid": "^10.0.0"
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.4.1",
+    "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^8.42.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
-    "prisma": "^5.16.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
