--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/swagger": "^8.0.1",
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cache-manager": "5",
     "class-transformer": "^0.5.1",
