--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/swagger": "^8.0.1",
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "5.21.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "cache-manager": "5",
@@ -40,7 +40,7 @@
     "passport": "^0.7.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^5.21.1",
+    "prisma": "5.21.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "uuid": "^11.0.2"
